added image, video and header

--- a/index.html
+++ b/index.html
@@ -15,17 +15,25 @@ Date:
 <body>
     
     <div class="container">
-        <div class="header">header</div><!--header-->
+        <div class="header">
+          <h1> BasketBall </h1>
+          </div><!--header-->
 
-        <div class="side1">side1</div><!--side1-->
+        <div class="side1">
+          <img src="images/basketball hoop.jpg" alt="a nice basketball hoop with a clear backboard">
+          </div><!--side1-->
 
         <div class="section1">section1</div><!--section1-->
 
         <div class="section2">section2</div><!--section2-->
 
-        <div class="videoSection">videoSection</div><!--videoSection-->
+        <div class="videoSection">
+              <iframe width="100%" height="500" src="https://www.youtube.com/embed/t22flliJLTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div><!--videoSection-->
 
         <div class="side2">side2</div><!--side2-->
+
+        <div class="references">references</div>
         
         <div class="footer">footer</div><!--footer-->
     </div>
