--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@ Date:
         <div class="section2">section2</div><!--section2-->
 
         <div class="videoSection">
-              <iframe width="100%" height="500" src="https://www.youtube.com/embed/t22flliJLTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/t22flliJLTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div><!--videoSection-->
 
-        <div class="side2">side2</div><!--side2-->
+        <div class="side2">
+                 <img src="images/Basketball stadium.jpg" alt="this is a Basketball stadium filled with thousands of peopler">
+          </div><!--side2-->
 
         <div class="references">references</div>
         
