added colour and descriptions

--- a/index.html
+++ b/index.html
@@ -23,9 +23,24 @@ Date:
           <img src="images/basketball hoop.jpg" alt="a nice basketball hoop with a clear backboard">
           </div><!--side1-->
 
-        <div class="section1">section1</div><!--section1-->
+        <div class="section1">
+                <h2>What is Basketball</h2>
+                <p>Basketball is a team sport where twoteams, most comounly a team of 5, vs each other on a 91.86ft long and 49.21ft wide rectangular court The main goal for each team is to score the basketball into a 10ft hoop, shaped as a circle, to get a point for their team.</p>
+          </div><!--section1-->
 
-        <div class="section2">section2</div><!--section2-->
+        <div class="section2">
+          <h3>Basketball players</h3>
+          <ul> 
+                <li> Michael Jordan </li>
+                <li> LeBron James </li>
+                <li> Kobe Bryant </li>
+                <li> Stephen Curry </li>
+                <li> Magic Johnson </li>
+                <li> Shaquille O'neal </li>
+                <li> Giannis Antetokumpo </li>
+                <li> Wilt Chamberlain </li>
+                <li> Larry Bird </li>
+        </div><!--section2-->
 
         <div class="videoSection">
               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/t22flliJLTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
