added references and footer, added background colour, changed the height of the photos, added links.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@ Date:
                  <img src="images/Basketball stadium.jpg" alt="this is a Basketball stadium filled with thousands of peopler">
           </div><!--side2-->
 
-        <div class="references">references</div>
+        <div class="references">
+         <li> <a href="https://unsplash.com/photos/f_FOlCWGh3U" > Basketball Hoop Photo</a></li>
+
+         <li> <a href="https://unsplash.com/photos/XmYSlYrupL8">Basketball Stadium Photo</a> </li>
+
+         <li> <a href="https://en.wikipedia.org/wiki/Basketball">Information</a> </li>
+        </div>
         
-        <div class="footer">footer</div><!--footer-->
+        <div class="footer">Copyright ASH HOEFLICH 2021</div><!--footer-->
     </div>
 
 </body>
