changed the font for the header and section 1 and 2, i added padding to the references and footer, added colour to the fonts

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ Date:
           </div><!--side2-->
 
         <div class="references">
-         <li> <a href="https://unsplash.com/photos/f_FOlCWGh3U" > Basketball Hoop Photo</a></li>
+         <a href="https://unsplash.com/photos/f_FOlCWGh3U" > Basketball Hoop Photo</a>
 
-         <li> <a href="https://unsplash.com/photos/XmYSlYrupL8">Basketball Stadium Photo</a> </li>
+         <a href="https://unsplash.com/photos/XmYSlYrupL8">Basketball Stadium Photo</a>
 
-         <li> <a href="https://en.wikipedia.org/wiki/Basketball">Information</a> </li>
+         <a href="https://en.wikipedia.org/wiki/Basketball">Information</a>
         </div>
         
         <div class="footer">Copyright ASH HOEFLICH 2021</div><!--footer-->
